# tcalc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
libtcalc/: CMakeLists.txt  diagnostic.cpp  diagnostic.h  expression.cpp  expression.h  lexer.cpp  lexer.h  lib.cpp  lib.h  libtcalcConfig.cmake.in  number.cpp  number.h  operation.cpp  operation.h  parser.cpp  parser.h  source_position.h  source_span.cpp  source_span.h  source_token.cpp  source_token.h  string_reader.cpp  string_reader.h  tc_diagnostic.cpp  tc_diagnostic.h  tc_eval_result.cpp  tc_eval_result.h  tc_eval_stack.cpp  tc_eval_stack.h  tc_evaluator.cpp  tc_evaluator.h  tc_expression.h  tc_lexer.cpp  tc_lexer.h  tc_number.cpp  tc_number.h  tc_operation.cpp  tc_operation.h  tc_parser.cpp  tc_parser.h  (+16 more)
libtcalc/cmake/: FindGMP.cmake  FindMPC.cmake  FindMPFR.cmake  FindUTF8PROC.cmake
libtcalc/internal/: builtins.cpp  builtins.h  utf8utils.cpp  utf8utils.h
src/: main.cpp  string_reader.cpp  string_reader.h
tcalc_console/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test-errors.cpp  test-expression-equivalency.cpp  test-expression-evaluation.cpp  test-real-mode-errors.cpp  test-simple-operations.cpp
